# smap_interfaces

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: CI.yml
include/smap_interfaces/: interface_templates.hpp
msg/: BoundingBox2D.msg  BoundingBox3D.msg  OcclusionMap.msg  SmapData.msg  SmapDetectionDebug.msg  SmapDetections.msg  SmapObject.msg  SmapObservation.msg  SmapPrediction.msg
srv/: AddClassifier.srv  AddPerceptionModule.srv  SmapClasses.srv
